# MultiModal-KB-Agent

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  PROJECT_DOC.md  bugfix.md  img2_decoded.txt  img2_result.json  mcp.json  mcp_result.json  pyproject.toml  requirements.txt  result_decoded.txt  resume_project.txt
.claude/: settings.local.json
.streamlit/: config.toml
app/: config.py  main.py
app/api/: admin.py  analytics.py  chat.py  knowledge.py  upload.py
app/core/agent/: executor.py  prompt.py
app/core/agent/tools/: __init__.py  calculator.py  code_exec.py  file_ops.py  kb_search.py  search.py
app/core/mcp/: server.py
app/core/memory/: context.py  long_term.py  short_term.py
app/core/multimodal/: audio.py  image.py  ocr.py  pipeline.py  video.py  windows_ocr.py
app/core/rag/: chain.py  embedder.py  loader.py  retriever.py  splitter.py
app/middleware/: logging.py  rate_limit.py
app/models/: database.py  schemas.py
app/services/: cache_service.py  embedding_service.py  finetuned_service.py  llm_service.py
app/utils/: exceptions.py  helpers.py  logger.py
docker/: .env.example  Dockerfile  Dockerfile.frontend  docker-compose.yml
frontend/: app.py
frontend/pages/: analytics.py
mcp_server/: __init__.py  config.py  kb_tools.py  server.py  vision_tools.py
scripts/: benchmark.py  finetune.py  finetune_data.py  init_db.py  mcp_qwen_vision.py  test_tools.py
tests/: test_api.py  test_rag.py
upload_temp/: rag_knowledge_guide.md
