[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-kb-agent"
version = "0.1.0"
description = "多模态智能知识库Agent系统"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "streamlit>=1.30.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "openai>=1.0.0",
    "chromadb>=0.4.0",
    "pymysql>=1.1.0",
    "sqlalchemy>=2.0.0",
    "redis>=5.0.0",
    "Pillow>=10.0.0",
    "pymupdf>=1.23.0",
    "python-docx>=1.0.0",
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "httpx>=0.25.0",
    "tiktoken>=0.5.0",
    "aiofiles>=23.0.0",
    "duckduckgo_search>=8.0.0",
]

[project.optional-dependencies]
multimodal = [
    "openai-whisper>=20231117",
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.5.0",
    "ffmpeg-python>=0.2.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
]
